fix: Notif popup z-index changed to darken all background

--- a/kawayfsl/src/App.css
+++ b/kawayfsl/src/App.css
@@ -293,10 +293,11 @@ b {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.7);
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
+  z-index: 1;
 }
 
 .overlay:target {
@@ -305,12 +306,12 @@ b {
 }
 
 .popup {
+  position: relative;
   margin: 70px auto;
   padding: 20px;
   background: azure;
   border-radius: 20px;
   width: 30%;
-  position: relative;
   transition: all 5s ease-in-out;
 }
 
@@ -340,6 +341,11 @@ b {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.card {
+  position: relative;
+  z-index: 0;
 }
 
 /* MAIN CONTENT CARD */
